# MiladyOS

./: .gitattributes  .gitignore  .mcp.json  Caddyfile  Dockerfile  README.md  amd.sh  builder.sh  ca.crt  casc.yaml  config.yaml  editing.py  github-runner-deployment.yaml  install_miladyos.sh  main.py  miladyos-deployment.yaml  miladyos-ingress.yaml  miladyos.crt  miladyos.key  miladyos_mcp.py  miladyos_metadata.py  nvidia.sh  plugins.txt  pyproject.toml  startup.sh
AutoDidact/: .gitignore  Dockerfile.embedding  Dockerfile.inference  Dockerfile.qa_generation  Dockerfile.rl_training  Dockerfile.training  README.md  UnslothGRPOTrainerTemp.py  autodidact.ipynb  docker-compose.yml  embeddings.py  generate_data.py  requirements.txt  rl_helpers.py  run_autodidact.sh  run_stage.sh  search_module.py  simple_qa.py
deploy/: argocd-values.yaml  cloudflare-ingress.yaml  longhorn-values.yaml  miladyos-deployment.yaml
display-control/: deploy.sh  docker-compose.yml
pipelines/: civitai-parser.Jenkinsfile  civitai-scraper.Jenkinsfile  dreambooth.Jenkinsfile  extract-ctags.Jenkinsfile  files-to-container-image.Jenkinsfile  llamacpp-distributed.Jenkinsfile  llamacpp-main.Jenkinsfile  lscpu.Jenkinsfile  piper-pretrain.Jenkinsfile  piper-train.Jenkinsfile  sd-generate.Jenkinsfile  test-mistral.Jenkinsfile
plugins/: ansicolor.hpi  apache-httpcomponents-client-5-api.hpi  authorize-project.hpi  aws-java-sdk-minimal.hpi  blueocean-bitbucket-pipeline (1).hpi  blueocean-bitbucket-pipeline.hpi  blueocean-commons.hpi  blueocean-config.hpi  blueocean-core-js.hpi  blueocean-dashboard.hpi  (+88 more)
(+80 files in other folders)
